fix issue #9388 for waterfall

--- a/apps/waterfall/waterfall/src/app/dashboard/title/edit/edit.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/edit/edit.component.html
@@ -21,7 +21,7 @@
       <logo-spinner></logo-spinner>
     </ng-container>
     <ng-template #edit>
-      <button mat-flat-button color="primary" (click)="update()" [disabled]="invalid$ | async">Edit Movie</button>
+      <button mat-flat-button color="primary" (click)="update()" [disabled]="invalid$ | async">Save Movie</button>
     </ng-template>
   </section>
 </ng-template>
