--- a/libs/waterfall/src/lib/components/edit/edit.component.html
+++ b/libs/waterfall/src/lib/components/edit/edit.component.html
@@ -8,7 +8,7 @@
   <a mat-icon-button routerLink="..">
     <mat-icon svgIcon="arrow_back"></mat-icon>
   </a>
-  <h1>Edit Movie</h1>
+  <h1>{{ createMode ? 'Create' : 'Edit' }} Movie</h1>
 
   <mat-stepper #stepper>
     <!-- override default stepper icons for the "edit" & "done" steps -->
@@ -21,6 +21,7 @@
 
     <mat-step>
       <ng-template matStepLabel>Movie Information</ng-template>
+
       <waterfall-title-form
         [movieId]="movieId"
         [movieForm]="movieForm"
@@ -32,8 +33,8 @@
           <logo-spinner></logo-spinner>
         </ng-container>
         <ng-template #editInfo>
-          <button mat-flat-button color="primary" (click)="updateMovie()" [disabled]="invalidMovie$ | async">
-            <span>Edit Movie</span>
+          <button mat-flat-button color="primary" (click)="update()" [disabled]="invalidMovie$ | async">
+            <span>{{ createMode ? 'Create' : 'Edit' }} Movie</span>
             <mat-icon svgIcon="arrow_forward"></mat-icon>
           </button>
         </ng-template>
@@ -45,13 +46,14 @@
       <waterfall-right-holder-form
         [rightholdersForm]="rightholdersForm"
         (skip)="skip()"
+        skippable
       ></waterfall-right-holder-form>
       <section>
         <ng-container *ngIf="updating$ | async; else editRightHolders">
           <logo-spinner></logo-spinner>
         </ng-container>
         <ng-template #editRightHolders>
-          <button mat-flat-button color="primary" (click)="updateRightholders()" [disabled]="invalidRightholders$ | async">
+          <button mat-flat-button color="primary" (click)="update()" [disabled]="invalidRightholders$ | async">
             <span>Continue</span>
             <mat-icon svgIcon="arrow_forward"></mat-icon>
           </button>
@@ -73,25 +75,7 @@
         </ng-template>
       </section>
     </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Invite Right Holders</ng-template>
-      <p>4</p>
-      <section>
-        <ng-container *ngIf="updating$ | async; else editInvite">
-          <logo-spinner></logo-spinner>
-        </ng-container>
-        <ng-template #editInvite>
-          <button mat-flat-button color="primary">
-            <span>Continue</span>
-            <mat-icon svgIcon="arrow_forward"></mat-icon>
-          </button>
-        </ng-template>
-      </section>
-    </mat-step>
-    
     
   </mat-stepper>
 
-
-  
 </ng-template>
