--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -20,6 +20,9 @@
   <a mat-button routerLink="expenses" routerLinkActive="mat-primary">
     <mat-icon svgIcon="monetization"></mat-icon><span matLine>Expenses</span>
   </a>
+  <a mat-button routerLink="sources" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="world"></mat-icon><span matLine>Sources</span>
+  </a>
   <a mat-button routerLink="imdb" routerLinkActive="mat-primary">
     <mat-icon svgIcon="movie"></mat-icon><span matLine>Imdb</span>
   </a>
