--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -233,8 +233,7 @@
         <waterfall-g6-graph [tree]="tree"></waterfall-g6-graph>
       </ng-container>
       
-
-      <ng-container *ngIf="versions.length else noWaterfall">
+      <ng-container *ngIf="versions.length">
         <h3>Tree</h3>
         <article class="surface">
           <waterfall-g6-tree *ngIf="versionsAndActions.isActive" [waterfall]="waterfall"></waterfall-g6-tree>
