WIP #9420 rights import & crm improvments

--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -23,6 +23,9 @@
   <a mat-button routerLink="sources" routerLinkActive="mat-primary">
     <mat-icon svgIcon="world"></mat-icon><span matLine>Sources</span>
   </a>
+  <a mat-button routerLink="rights" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="local_offer"></mat-icon><span matLine>Rights</span>
+  </a>
   <a mat-button routerLink="imdb" routerLinkActive="mat-primary">
     <mat-icon svgIcon="movie"></mat-icon><span matLine>Imdb</span>
   </a>
