--- a/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.html
@@ -8,7 +8,7 @@
     <p class="mat-body-1">
       Please initalize a first version that you're going to work with.
     </p>
-    <a (click)="initWaterfall()" class="surface">
+    <a target="_blank" [href]="crmAppUrl" class="surface">
       <img asset="add_draft.svg" alt="Add waterfall image">
       <button mat-button color="primary">Initialize Waterfall</button>
     </a>
