fix PR comments + new found bugs

--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -52,7 +52,8 @@
         scope="territories"
         label="Select territoties"
         filterPlaceholder="Specify territories to filter"
-        [control]="searchForm.get('originCountries')">
+        [control]="searchForm.get('originCountries')"
+        test-id="origin-countries">
       </group-multiselect>
     </ng-template>
 
