--- a/libs/ui/src/lib/static-autocomplete/groupB/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/groupB/group.component.html
@@ -1,8 +1,8 @@
 <mat-form-field appearance="outline">
   <mat-label>{{ label }}</mat-label>
   <mat-icon matPrefix [svgIcon]="selectIcon"></mat-icon>
-  <mat-select multiple [formControl]="control" (openedChange)="resetSearch()" test-id="filter-select">
-    <mat-select-trigger>{{ control.value | toGroupLabel: scope }}</mat-select-trigger>
+  <mat-select multiple [formControl]="control" (openedChange)="onOpen()" test-id="filter-select">
+    <mat-select-trigger>{{ control.value | toGroupLabel: scope|join }}</mat-select-trigger>
     <header>
       <mat-checkbox
         color="primary"
@@ -15,6 +15,7 @@
         [placeholder]="filterPlaceholder"
         [formControl]="search"
         (keydown)="$event.stopPropagation()"
+        #searchInput
         test-id="search-input-control"
       />
       <mat-icon *ngIf="!search.value" svgIcon="search"></mat-icon>
@@ -23,7 +24,7 @@
       </button>
     </header>
     <ng-container *ngFor="let group of groups">
-      <div [ngClass]="{ hidden: !selectable[group.label] }">
+      <div [ngClass]="{ hidden: !selectable[group.label] }" class="mat-option group">
         <mat-checkbox
           color="primary"
           [indeterminate]="indeterminate[group.label]"
@@ -35,14 +36,10 @@
         <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
           <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'"></mat-icon>
         </button>
+        <mat-divider></mat-divider>
       </div>
-      <mat-divider></mat-divider>
       <ng-container *ngFor="let item of group.items">
-        <mat-option
-          [value]="item"
-          [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
-          [attr.test-id]="item"
-        >
+        <mat-option [value]="item" class="item" [ngClass]="{ hidden: !selectable[item] || visible[group.label] }" [attr.test-id]="item">
           {{ item | toLabel: scope }}
         </mat-option>
       </ng-container>
