--- a/libs/ui/src/lib/static-autocomplete/groupB/group.component.scss
+++ b/libs/ui/src/lib/static-autocomplete/groupB/group.component.scss
@@ -32,3 +32,17 @@ input {
 .hidden {
   display: none;
 }
+
+.item {
+  padding: 0 24px;
+}
+
+mat-checkbox{
+  width: 100%;
+}
+
+button{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
