--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -51,6 +51,7 @@
       <group-multiselect
         scope="territories"
         label="Select territoties"
+        displayAll="World"
         filterPlaceholder="Specify territories to filter"
         [control]="searchForm.get('originCountries')"
         test-id="origin-countries">
