--- a/libs/ui/src/lib/static-autocomplete/groupB/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/groupB/group.component.html
@@ -2,7 +2,9 @@
   <mat-label>{{ label }}</mat-label>
   <mat-icon matPrefix [svgIcon]="selectIcon"></mat-icon>
   <mat-select multiple [formControl]="control" (openedChange)="onOpen()" test-id="filter-select">
-    <mat-select-trigger>{{ control.value | toGroupLabel: scope|join }}</mat-select-trigger>
+    <mat-select-trigger>{{
+      control.value.length === items.length ? displayAll : (control.value | toGroupLabel: scope | join)
+    }}</mat-select-trigger>
     <header>
       <mat-checkbox
         color="primary"
@@ -39,7 +41,12 @@
         <mat-divider></mat-divider>
       </div>
       <ng-container *ngFor="let item of group.items">
-        <mat-option [value]="item" class="item" [ngClass]="{ hidden: !selectable[item] || visible[group.label] }" [attr.test-id]="item">
+        <mat-option
+          [value]="item"
+          class="item"
+          [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
+          [attr.test-id]="item"
+        >
           {{ item | toLabel: scope }}
         </mat-option>
       </ng-container>
