--- a/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.scss
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.scss
@@ -1,35 +1,5 @@
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 24px;
-}
 
-article {
-  display: flex;
-  justify-content: center;
-}
-
-h1 {
-  margin: 0;
-  margin-bottom: 24px;
-}
-
-p {
-  text-align: center;
-}
-
-a.surface {
-  margin-top: 42px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 330px;
-  
-  img {
-    width: 100px;
-    align-self: center;
-  }
+img {
+  width: 100%;
+  padding: 32px;
 }
